# niriqml

./: .clang-format  .gitignore  AGENTS.md  API.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  FeatureMapping.md  FutureDevelopment.md  README.md  niriactions.cpp  niriactions.h  niriconnection.cpp  niriconnection.h  nirierror.cpp  nirierror.h  nirieventlog.cpp  nirieventlog.h  nirievents.cpp  nirievents.h  nirilinebuffer.cpp  nirilinebuffer.h  niripendingreply.cpp  niripendingreply.h  nirirequests.cpp  nirirequests.h  niristate.cpp  niristate.h  niritypes.cpp  niritypes.h  niriutils.cpp  niriutils.h  niriwindowreactive.cpp  niriwindowreactive.h  niriwindowsmodel.cpp  niriwindowsmodel.h  niriworkspacereactive.cpp  niriworkspacereactive.h  niriworkspacesmodel.cpp  niriworkspacesmodel.h
.github/workflows/: ci.yml
docs/: SCHEMA.md
examples/: DashboardVisualizer.qml  WindowList.qml
scripts/: build  build-test  install  run-examples  run-test-dash  run-tests
tests/: nirimock.cpp  nirimock.h  test_api.cpp  test_api.qml  test_connection.cpp  test_converter.cpp  test_events.cpp  test_framing.cpp  test_live_common.h  test_live_events.cpp  test_live_layer2.cpp  test_live_wire.cpp  test_live_write.cpp  test_types.cpp
